--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,17 @@
     "require": {
         "php": ">=5.6"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^5.5"
+    },
     "autoload": {
         "psr-4": {
             "Maleficarum\\Config\\": "src/Config/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Test\\Maleficarum\\Config\\": "test/"
         }
     }
 }
