--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,16 @@
 {
     "name": "maleficarum/config",
+    "license": "proprietary",
     "description": "Maleficarum config component",
     "require": {
         "php": ">=7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7"
+        "phpunit/phpunit": "^6.0"
     },
     "autoload": {
         "psr-4": {
             "Maleficarum\\Config\\": "src/Config/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Test\\Maleficarum\\Config\\": "test/"
         }
     }
 }
